Test new AI vectorizer for less memory usage

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
 Django==5.2.4
 channels[daphne]==4.2.2
 
-nltk==3.8.1
-transformers==4.41.2
-torch==2.3.0
+# nltk==3.8.1
+# transformers==4.41.2
+# torch==2.3.0
 
 scikit-learn==1.4.2
 numpy==1.26.4
@@ -17,4 +17,3 @@ whitenoise==6.6.0
 python-dotenv
 dj_database_url
 
-sentence-transformers
